...
            "state" : "translated",
            "value" : "Очистить очередь"
          }
        }
      }
    },
    "Close" : {
      "comment" : "A label that closes the current window.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
...
            "state" : "translated",
            "value" : "Оригинальный релиз"
          }
        }
      }
    },
    "Pause" : {
      "comment" : "Title of a menu item to pause playback.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
...
            "state" : "translated",
            "value" : "Сканирование медиатеки…"
          }
        }
      }
    },
    "Search" : {
      "comment" : "A button that triggers a search for images.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
...
            "state" : "translated",
            "value" : "Задаёт режим повтора в Petrichor."
          }
        }
      }
    },
    "Settings" : {
      "comment" : "A system icon for app settings.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
...
            "state" : "translated",
            "value" : "Нет подключения к интернету"
          }
        }
      }
    },
    "No Music" : {
      "extractionState" : "manual",
      "localizations" : {
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Нет музыки"
...
            "state" : "translated",
            "value" : "Переименовать плейлист"
          }
        }
      }
    },
    "Rescan Library" : {
      "extractionState" : "manual",
      "localizations" : {
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Пересканировать медиатеку"
...
